[package]
name = "correlation_clustering"
version = "0.1.0"
authors = ["CheezBarger <jacob.labor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
rand = "0.7"
image = "0.23"

[dev-dependencies]
ndarray-npy = "0.5"
ndarray-image = "0.2"
